--- a/public/paghome.html
+++ b/public/paghome.html
@@ -17,18 +17,22 @@
 
   <body>
     <!-- Conteúdo da página -->
-    <a href="paghome.html">
-      <img src="images/logoinovtech.png" alt="Logotipo InovTech" id="logo" >
-    </a>
+
     <nav id="navbar">
 
-      <div class="navbar-botoes">
+      <div class="logo">
+        <a href="paghome.html">
+        <img src="images/logoinovtech.png" alt="Logo" style="width: 22.5%;">
+        </a>
+      </div>
+
+      <div id="navbar-botoes">
         <ul>
           <!--<li><a href ="#">HOME</a></li>--> 
-          <li><a href ="info.html">SOBRE NÓS</a></li>
-          <li><a href = "mapa.html">MAPA</a></li>
-          <li><a href ="analise.html">ANÁLISE DE DADOS</a></li> 
-          <li><a href ="relatorio.html">RELATÓRIO</a></li> 
+          <li><a href ="info.html" class="botao-nav">SOBRE NÓS</a></li>
+          <li><a href = "mapa.html" class="botao-nav">MAPA</a></li>
+          <li><a href ="analise.html" class="botao-nav">ANÁLISE DE DADOS</a></li> 
+          <li><a href ="relatorio.html" class="botao-nav">RELATÓRIO</a></li> 
 
         </ul>
       </div>
@@ -43,21 +47,21 @@
   </div>
   <div class="carousel-inner" id="carouselconfig">
     <div class="carousel-item active">
-      <img src="images/img1.png" class="d-block w-100" alt="...">
+      <img src="images/img1.png" class="d-block w-100" alt="Slide 1">
       <div class="carousel-caption d-none d-md-block">
         <!-- <h5></h5> -->
         <p>O IPT é um instituto vinculado à Secretaria de Ciência, Tecnologia e Inovação do Estado de São Paulo e há 123 anos colabora para o processo de desenvolvimento do País.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/img2.png" class="d-block w-100" alt="...">
+      <img src="images/img2.png" class="d-block w-100" alt="Slide 2">
       <div class="carousel-caption d-none d-md-block">
         <!-- <h5></h5> -->
         <!-- <p>Um dos maiores institutos de pesquisas do Brasil, o IPT conta com laboratórios capacitados e equipe de pesquisadores e técnicos altamente qualificados.</p> -->
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/img3.png" class="d-block w-100" alt="...">
+      <img src="images/img3.png" class="d-block w-100" alt="Slide 3">
       <div class="carousel-caption d-none d-md-block">
         <!-- <h5></h5> -->
         <!-- <p>O IPT atua de forma multidisciplinar, contemplando os mais diversos segmentos como energia, transportes, petróleo & gás, meio ambiente, construção civil, cidades, saúde e segurança.</p> -->
@@ -74,23 +78,21 @@
   </button>
 </div>
 
-  <div class="footer">
-    <footer>
-      <p> &copy; IPT - Instituto de Pesquisas Tecnológicas </p>
-      <div class="icones">
-        <a href="https://www.instagram.com/ipt_oficial/" target="_blank">
-          <img src="images/instagram.png" alt="instagram">
-        </a>
-        <a href="https://www.linkedin.com/school/iptsp/" target="_blank">
-          <img src="images/linkedin.png" alt="linkedin">
-        </a>
-        <a href="https://www.ipt.br/" target="_blank">
-          <img src="images/siteipt.png" alt="siteipt">
-        </a>
+  <footer class="footer">
+    <div class="footer-conteudo">
+      <div class="footer-info">
+        <p> &copy; IPT - Instituto de Pesquisas Tecnológicas </p>
       </div>
-   </footer>
-    
-  </div>
+      <div class="footer-icones">
+        <a href="https://www.instagram.com/ipt_oficial/" target="_blank"><img src="images/instagram.png" class="icon" alt="Instagram IPT"></a>
+        <a href="https://www.linkedin.com/school/iptsp/" target="_blank"><img src="images/linkedin.png" class="icon" alt="Linkedin IPT"></a>
+        <a href="https://www.ipt.br/" target="_blank"><img src="images/siteipt.png" class="icon" alt="Site IPT"></a>
+        <!-- Adicione mais ícones e links aqui -->
+      </div>
+
+    </div>
+  </footer>
+  
     <!--ÁREA DE TESTE-->
   </body>
 </html>
