--- a/public/relatorio.html
+++ b/public/relatorio.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="visual.css">   
-    <title>Relatorio</title>
-</head>
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" type="text/css" href="visual.css">   
+      <title>Relatorio</title>
+  </head>
 
-<body>
-
-    <a href="paghome.html">
-        <img src="images/logoinovtech.png" alt="Logotipo" id="logo">
-    </a>
+  <body style="overflow: hidden;">
 
     <nav id="navbar">
 
-        <div class="navbar-botoes">
-          <ul>
-            <!--<li><a href ="#">HOME</a></li>--> 
-            <li><a href ="info.html">SOBRE NÓS</a></li>
-            <li><a href = "#">MAPA</a></li>
-            <li><a href ="analise.html">ANÁLISE DE DADOS</a></li> 
-            <li><a href ="relatorio.html">RELATÓRIO</a></li> 
-  
-          </ul>
-        </div>
-        
-      </nav>
+      <div class="logo">
+        <a href="paghome.html">
+        <img src="images/logoinovtech.png" alt="Logo" style="width: 22.5%;">
+        </a>
+      </div>
+
+      <div id="navbar-botoes">
+        <ul>
+          <!--<li><a href ="#">HOME</a></li>--> 
+          <li><a href ="info.html" class="botao-nav">SOBRE NÓS</a></li>
+          <li><a href = "mapa.html" class="botao-nav">MAPA</a></li>
+          <li><a href ="analise.html" class="botao-nav">ANÁLISE DE DADOS</a></li> 
+          <li><a href ="relatorio.html" class="botao-nav">RELATÓRIO</a></li> 
+
+        </ul>
+      </div>
+      
+    </nav>
+
     <div style="width: 100%; height: 100vh;">
         <embed src="relatorio.pdf" type="application/pdf" width="100%" height="100%" />
     </div>
 
-</body>
+  </body>
 </html>
