--- a/public/analise.html
+++ b/public/analise.html
@@ -12,35 +12,31 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"></script>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script> -->
-    <!-- <link rel="stylesheet" href="visual.css"> -->
     <link rel="stylesheet" href="visual.css">
     <script src="analise.js"></script>
   </head>
 
-  <body>
+  <body style="overflow-x: hidden;">
 
-    <nav id="navbar">
-
-      <div class="logo">
-        <a href="paghome.html">
-        <img src="images/logoinovtech.png" alt="Logo" style="width: 22.5%;">
+    <header>
+      <nav>
+        <a href="paghome.html" class="link">
+            <img src="images/logoinovtech.png">
         </a>
-      </div>
-
-      <div id="navbar-botoes">
-        <ul>
-          <!--<li><a href ="#">HOME</a></li>--> 
-          <li><a href ="info.html" class="botao-nav">SOBRE NÓS</a></li>
-          <li><a href = "mapa.html" class="botao-nav">MAPA</a></li>
-          <li><a href ="analise.html" class="botao-nav">ANÁLISE DE DADOS</a></li> 
-          <li><a href ="relatorio.html" class="botao-nav">RELATÓRIO</a></li> 
-
+        <div class="mobile-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <ul class="nav-list">
+          <li><a href ="info.html">Sobre Nós</a></li>
+          <li><a href = "mapa.html">Mapa</a></li>
+          <li><a href ="analise.html">Análise Geral</a></li>
+          <li><a href ="relatorio.html">Relatório</a></li>
         </ul>
-      </div>
-      
-    </nav>
+      </nav>
+    </header>
+    <script src="navbar.js"></script>
 
     <div>
 
@@ -65,83 +61,7 @@
       <br>
       <img id="grafico_selecionado2" class="graficos" src="graficos/EmBranco.png">
 
-      <script>
-        const vagao = document.getElementById('menu_vagao');
-        const viagem = document.getElementById('menu_viagem');
-        const graficoSelecionado1 = document.getElementById('grafico_selecionado1');
-        const graficoSelecionado2 = document.getElementById('grafico_selecionado2');
 
-
-        viagem.addEventListener('change', () => {
-          const viagemSelecionada = viagem.value;
-          changeViagem(viagemSelecionada);
-          document.getElementById('menu_vagao').value = "VagaoE"
-        });
-
-        function changeViagem(viagem) {
-          if (viagem === "Viagem1") {
-            graficoSelecionado1.src = "graficos/Markov - Viagem 1 - E - act.bmp";
-            graficoSelecionado2.src = "graficos/Markov - Viagem 1 - E - forca.bmp";
-
-          } else if (viagem === "Viagem2") {
-            graficoSelecionado1.src = "graficos/Markov -  Viagem 2 - E - act.bmp";
-            graficoSelecionado2.src = "graficos/Markov - Viagem 2 - E - forca.bmp";
-            // ...
-          } else if (viagem === "Viagem3") {
-            graficoSelecionado1.src = "graficos/Markov - Viagem 3 - E - act.bmp";
-            graficoSelecionado2.src = "graficos/Markov - Viagem 3 - E - forca.bmp";
-          } else if (viagem === "Viagem4") {
-            graficoSelecionado1.src = "graficos/Markov - Viagem 4 - E - act.bmp";
-            graficoSelecionado2.src = "graficos/Markov - Viagem 4 - E - forca.bmp";
-          } else if (viagem === "Viagem5") {
-            graficoSelecionado1.src = "graficos/Markov - Viagem 5 - E - act.bmp";
-            graficoSelecionado2.src = "graficos/Markov - Viagem 5 - E - forca.bmp";
-          }
-        }
-
-        viagem.addEventListener('change', () => {
-          const viagemSelecionada = viagem.value;
-          vagao.addEventListener('change', () => {
-            const vagaoSelecionado = vagao.value;
-
-            if (viagemSelecionada === "Viagem1" && vagaoSelecionado === "VagaoE") {
-              graficoSelecionado1.src = "graficos/Markov - Viagem 1 - E - act.bmp";
-              graficoSelecionado2.src = "graficos/Markov - Viagem 1 - E - forca.bmp";
-            } else if (viagemSelecionada === "Viagem1" && vagaoSelecionado === "VagaoF") {
-              graficoSelecionado1.src = "graficos/Markov - Viagem 1 - F - act.bmp";
-              graficoSelecionado2.src = "graficos/Markov - Viagem 1- F - forca.bmp";
-            } else if (viagemSelecionada === "Viagem2" && vagaoSelecionado === "VagaoE") {
-              graficoSelecionado1.src = "graficos/Markov -  Viagem 2 - E - act.bmp";
-              graficoSelecionado2.src = "graficos/Markov - Viagem 2 - E - forca.bmp";
-            } else if (viagemSelecionada === "Viagem2" && vagaoSelecionado === "VagaoF") {
-              graficoSelecionado1.src = "graficos/Markov - Viagem 2 - F - act.bmp";
-              graficoSelecionado2.src = "graficos/Markov - Viagem 2 - F - forca.bmp";
-            } else if (viagemSelecionada === "Viagem3" && vagaoSelecionado === "VagaoE") {
-              graficoSelecionado1.src = "graficos/Markov - Viagem 3 - E - act.bmp";
-              graficoSelecionado2.src = "graficos/Markov - Viagem 3 - E - forca.bmp";
-            } else if (viagemSelecionada === "Viagem3" && vagaoSelecionado === "VagaoF") {
-              graficoSelecionado1.src = "graficos/Markov - Viagem 3- F - act.bmp";
-              graficoSelecionado2.src = "graficos/Markov - Viagem 3 - F - forca.bmp";
-            } else if (viagemSelecionada === "Viagem4" && vagaoSelecionado === "VagaoE") {
-              graficoSelecionado1.src = "graficos/Markov - Viagem 4 - E - act.bmp";
-              graficoSelecionado2.src = "graficos/Markov - Viagem 4 - E - forca.bmp";
-            } else if (viagemSelecionada === "Viagem4" && vagaoSelecionado === "VagaoF") {
-              graficoSelecionado1.src = "graficos/Markov - Viagem 4 - F - act.bmp";
-              graficoSelecionado2.src = "graficos/Markov - Viagem 4 - F - forca.bmp";
-            } else if (viagemSelecionada === "Viagem5" && vagaoSelecionado === "VagaoE") {
-              graficoSelecionado1.src = "graficos/Markov - Viagem 5 - E - act.bmp";
-              graficoSelecionado2.src = "graficos/Markov - Viagem 5 - E - forca.bmp";
-            } else if (viagemSelecionada === "Viagem5" && vagaoSelecionado === "VagaoF") {
-              graficoSelecionado1.src = "graficos/Markov - Viagem 5 - F - act.bmp";
-              graficoSelecionado2.src = "graficos/Markov - Viagem 5 - F - forca.bmp";
-            } else if (viagemSelecionada === "nada" && vagaoSelecionado === "nada") {
-              graficoSelecionado1.src = "graficos/EmBranco.png";
-              graficoSelecionado2.src = "graficos/EmBranco.png";
-            }
-          });
-        });
-      ;
-    </script>
   </div>
   </div>
   <div id="tabela"></div>
@@ -152,7 +72,7 @@
     <footer class="footer">
       <div class="footer-conteudo">
         <div class="footer-info">
-          <p> &copy; IPT - Instituto de Pesquisas Tecnológicas </p>
+          <p style="margin-top: 2%;" > &copy; IPT - Instituto de Pesquisas Tecnológicas </p>
         </div>
         <div class="footer-icones">
           <a href="https://www.instagram.com/ipt_oficial/" target="_blank"><img src="images/instagram.png" class="icon" alt="Instagram IPT"></a>
