--- a/public/paghome.html
+++ b/public/paghome.html
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <meta name="description" content="Página de apresentação de dados contidos em relatórios do LInE">
     <meta name="keywords" content="IPT, LInE">
-    <script src="teste.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="visual.css">
@@ -15,83 +14,48 @@
 
   </head>
 
-  <body>
+  <body class="body_paghome">
     <!-- Conteúdo da página -->
-
-    <nav id="navbar">
-
-      <div class="logo">
-        <a href="paghome.html">
-        <img src="images/logoinovtech.png" alt="Logo" style="width: 22.5%;">
-        </a>
-      </div>
-
-      <div id="navbar-botoes">
-        <ul>
-          <!--<li><a href ="#">HOME</a></li>--> 
-          <li><a href ="info.html" class="botao-nav">SOBRE NÓS</a></li>
-          <li><a href = "mapa.html" class="botao-nav">MAPA</a></li>
-          <li><a href ="analise.html" class="botao-nav">ANÁLISE DE DADOS</a></li> 
-          <li><a href ="relatorio.html" class="botao-nav">RELATÓRIO</a></li> 
-
-        </ul>
-      </div>
-      
-    </nav>
-
-    <div id="carouselExampleCaptions" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner" id="carouselconfig">
-    <div class="carousel-item active">
-      <img src="images/img1.png" class="d-block w-100" alt="Slide 1">
-      <div class="carousel-caption d-none d-md-block">
-        <!-- <h5></h5> -->
-        <p>O IPT é um instituto vinculado à Secretaria de Ciência, Tecnologia e Inovação do Estado de São Paulo e há 123 anos colabora para o processo de desenvolvimento do País.</p>
-      </div>
+    <div class="content">
+      <div class="background-color"></div>
+      <img src="images/logoipt.png" class="logo" alt="Logo da Empresa" style="width:50%;">
+      <header>
+        <div >
+          <nav>
+            <a href="paghome.html" class="link">
+                <img src="images/logoinovtech.png">
+            </a>
+            <div class="mobile-menu">
+              <div class="line1"></div>
+              <div class="line2"></div>
+              <div class="line3"></div>
+            </div>
+            <ul class="nav-list">
+              <li><a href ="info.html">Sobre Nós</a></li>
+              <li><a href = "mapa.html">Mapa</a></li>
+              <li><a href ="analise.html">Análise Geral</a></li>
+              <li><a href ="relatorio.html">Relatório</a></li>
+            </ul>
+          </nav>
+            <script src="navbar.js"></script>
+        </div>
+      </header>
     </div>
-    <div class="carousel-item">
-      <img src="images/img2.png" class="d-block w-100" alt="Slide 2">
-      <div class="carousel-caption d-none d-md-block">
-        <!-- <h5></h5> -->
-        <!-- <p>Um dos maiores institutos de pesquisas do Brasil, o IPT conta com laboratórios capacitados e equipe de pesquisadores e técnicos altamente qualificados.</p> -->
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="images/img3.png" class="d-block w-100" alt="Slide 3">
-      <div class="carousel-caption d-none d-md-block">
-        <!-- <h5></h5> -->
-        <!-- <p>O IPT atua de forma multidisciplinar, contemplando os mais diversos segmentos como energia, transportes, petróleo & gás, meio ambiente, construção civil, cidades, saúde e segurança.</p> -->
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+    
+    <footer class="footer">
+      <div class="footer-conteudo">
+        <div class="footer-info">
+          <p> &copy; IPT - Instituto de Pesquisas Tecnológicas </p>
+        </div>
+        <div class="footer-icones">
+          <a href="https://www.instagram.com/ipt_oficial/" target="_blank"><img src="images/instagram.png" class="icon" alt="Instagram IPT"></a>
+          <a href="https://www.linkedin.com/school/iptsp/" target="_blank"><img src="images/linkedin.png" class="icon" alt="Linkedin IPT"></a>
+          <a href="https://www.ipt.br/" target="_blank"><img src="images/siteipt.png" class="icon" alt="Site IPT"></a>
+          <!-- Adicione mais ícones e links aqui -->
+        </div>
 
-  <footer class="footer">
-    <div class="footer-conteudo">
-      <div class="footer-info">
-        <p> &copy; IPT - Instituto de Pesquisas Tecnológicas </p>
       </div>
-      <div class="footer-icones">
-        <a href="https://www.instagram.com/ipt_oficial/" target="_blank"><img src="images/instagram.png" class="icon" alt="Instagram IPT"></a>
-        <a href="https://www.linkedin.com/school/iptsp/" target="_blank"><img src="images/linkedin.png" class="icon" alt="Linkedin IPT"></a>
-        <a href="https://www.ipt.br/" target="_blank"><img src="images/siteipt.png" class="icon" alt="Site IPT"></a>
-        <!-- Adicione mais ícones e links aqui -->
-      </div>
-
-    </div>
-  </footer>
+    </footer>
   
     <!--ÁREA DE TESTE-->
   </body>
