--- a/public/relatorio.html
+++ b/public/relatorio.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-      <meta charset="UTF-8">
-      <link rel="icon" href="images/logoinovtech.png">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" type="text/css" href="visual.css">   
-      <title>Relatorio</title>
+    <link rel="icon" href="images/logoinovtech.png">
+    <title>Relatório</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Página de apresentação de dados contidos em relatórios do LInE">
+    <meta name="keywords" content="IPT, LInE">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="visual.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   </head>
 
   <body style="overflow: hidden;">
-
-    <nav id="navbar">
-
-      <div class="logo">
-        <a href="paghome.html">
-        <img src="images/logoinovtech.png" alt="Logo" style="width: 22.5%;">
+    
+    <header>
+      <nav>
+        <a href="paghome.html" class="link">
+            <img src="images/logoinovtech.png">
         </a>
-      </div>
-
-      <div id="navbar-botoes">
-        <ul>
-          <!--<li><a href ="#">HOME</a></li>--> 
-          <li><a href ="info.html" class="botao-nav">SOBRE NÓS</a></li>
-          <li><a href = "mapa.html" class="botao-nav">MAPA</a></li>
-          <li><a href ="analise.html" class="botao-nav">ANÁLISE DE DADOS</a></li> 
-          <li><a href ="relatorio.html" class="botao-nav">RELATÓRIO</a></li> 
-
+        <div class="mobile-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <ul class="nav-list">
+          <li><a href ="info.html">Sobre Nós</a></li>
+          <li><a href = "mapa.html">Mapa</a></li>
+          <li><a href ="analise.html">Análise Geral</a></li>
+          <li><a href ="relatorio.html">Relatório</a></li>
         </ul>
-      </div>
-      
-    </nav>
+      </nav>
+    </header>
+    <script src="navbar.js"></script>
 
     <div style="width: 100%; height: 100vh;">
         <embed src="relatorio.pdf" type="application/pdf" width="100%" height="100%" />
