--- a/public/relatorio.html
+++ b/public/relatorio.html
@@ -29,7 +29,7 @@
           <li><a href ="info.html">Sobre Nós</a></li>
           <li><a href = "mapa.html">Mapa</a></li>
           <li><a href ="analise.html">Análise Geral</a></li>
-          <li><a href ="relatorio.html">Relatório</a></li>
+          ''<li><a href ="relatorio.html">Relatório</a></li>
         </ul>
       </nav>
     </header>
