--- a/public/frontend/analise.html
+++ b/public/frontend/analise.html
@@ -59,11 +59,14 @@
         <img id="grafico_selecionado2" class="graficos" src="graficos/EmBranco.png">
       </div>
       </div>
-      <div id="Titulo1">Dados gerais das Viagens</div>
+      <div class="tabela-flex">
+      <div id="Titulo1" >DADOS GERAIS DA VIAGEM</div>
       <div id="tabela"></div>
-      <div id="Titulo2">Vagão E</div>
-      <div id="Titulo3">Vagão F</div>
+      <div id="Titulo2">VAGÃO E</div>
       <div id="tabela2"></div>
+      <div id="Titulo3">VAGÃO F</div>
+      <div id="tabela3"></div>
+    </div>
     </div>
     
 
