--- a/public/frontend/mapa.html
+++ b/public/frontend/mapa.html
@@ -11,6 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mapbox/leaflet-image@0.4.0/leaflet-image.css" />
+    <script src="https://cdn.jsdelivr.net/gh/mapbox/leaflet-image@0.4.0/leaflet-image.js"></script>
     <link rel="stylesheet" type="text/css" href="visual.css">
     <link href="mapa.css" rel="stylesheet" />
 
@@ -134,6 +136,8 @@
      </div>
   
   <div id="map" ></div>
+
+  <button id="export-btn">Export</button>
 
     <!-- Bootstrap Modal Choque 1-->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
