--- a/public/frontend/paghome.html
+++ b/public/frontend/paghome.html
@@ -1,61 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-  <head>
-    <link rel="icon" href="images/logoinovtech.png">
-    <title>Website IPT</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="Página de apresentação de dados contidos em relatórios do LInE">
-    <meta name="keywords" content="IPT, LInE">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="visual.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <!-- deinfe o icone da página  -->
+  <link rel="icon" href="images/logoinovtech.png">
+  <!-- define o título da página  -->
+  <title>Website IPT</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Página de apresentação de dados contidos em relatórios do LInE">
+  <meta name="keywords" content="IPT, LInE">
+  <!-- define os links do bootstrap  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+  <!-- define o css que irá ser usado pela página  -->
+  <link rel="stylesheet" type="text/css" href="visual.css">
+  <!-- define a escala inicial da página  -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  </head>
+</head>
 
-  <body class="body_paghome">
-    <!-- Conteúdo da página -->
-    <div class="content">
-      <div class="background-color"></div>
-      <img src="images/logoipt.png" class="logo" alt="Logo da Empresa" style="width:50%;">
-      <header>
-        <div>
-          <nav>
-            <a href="paghome.html" class="link">
-                <img src="images/logoinovtech.png">
-            </a>
-            <div class="mobile-menu">
-              <div class="line1"></div>
-              <div class="line2"></div>
-              <div class="line3"></div>
-            </div>
-            <ul class="nav-list">
-              <li><a href ="info.html">Sobre Nós</a></li>
-              <li><a href = "mapa.html">Mapa</a></li>
-              <li><a href ="analise.html">Análise Geral</a></li>
-              <li><a href ="relatorio.html">Relatório</a></li>
-            </ul>
-          </nav>
-            <script src="navbar.js"></script>
-        </div>
-      </header>
-    </div>
-    
-    <footer class="footer">
-      <div class="footer-conteudo">
-        <div class="footer-info">
-          <p> &copy; IPT - Instituto de Pesquisas Tecnológicas </p>
-        </div>
-        <div class="footer-icones">
-          <a href="https://www.instagram.com/ipt_oficial/" target="_blank"><img src="images/instagram.png" class="icon" alt="Instagram IPT"></a>
-          <a href="https://www.linkedin.com/school/iptsp/" target="_blank"><img src="images/linkedin.png" class="icon" alt="Linkedin IPT"></a>
-          <a href="https://www.ipt.br/" target="_blank"><img src="images/siteipt.png" class="icon" alt="Site IPT"></a>
-          <!-- Adicione mais ícones e links aqui -->
-        </div>
-
+<body class="body_paghome">
+  <!-- Conteúdo da página -->
+  <div class="content">
+    <div class="background-color"></div>
+    <!-- imagem da logo do ipt -->
+    <img src="images/logoipt.png" class="logo" alt="Logo da Empresa" style="width:50%;">
+    <header>
+      <div>
+        <nav>
+          <!-- definição da navbar  -->
+          <a href="paghome.html" class="link">
+            <img src="images/logoinovtech.png">
+          </a>
+          <div class="mobile-menu">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+          </div>
+          <ul class="nav-list">
+            <!-- define os links da navbar -->
+            <li><a href="info.html">Sobre Nós</a></li>
+            <li><a href="mapa.html">Mapa</a></li>
+            <li><a href="analise.html">Análise Geral</a></li>
+            <li><a href="relatorio.html">Relatório</a></li>
       </div>
-    </footer>
-    <!--ÁREA DE TESTE-->
-  </body>
+      </ul>
+      </nav>
+      <!-- define o script que a navbar irá usar  -->
+      <script src="navbar.js"></script>
+  </div>
+  </header>
+  </div>
+
+  <footer class="footer" style="height: 12vh;">
+    <!-- define o footer  -->
+    <div class="footer-conteudo">
+      <div class="footer-info">
+        <p> &copy; IPT - Instituto de Pesquisas Tecnológicas </p>
+      </div>
+      <div class="footer-icones">
+        <!-- define os links e suas imagens do footer  -->
+        <a href="https://www.instagram.com/ipt_oficial/" target="_blank"><img src="images/instagram.png" class="icon"
+            alt="Instagram IPT"></a>
+        <a href="https://www.linkedin.com/school/iptsp/" target="_blank"><img src="images/linkedin.png" class="icon"
+            alt="Linkedin IPT"></a>
+        <a href="https://www.ipt.br/" target="_blank"><img src="images/siteipt.png" class="icon" alt="Site IPT"></a>
+      </div>
+
+    </div>
+  </footer>
+</body>
+
 </html>
