--- a/src/public/frontend/analise.html
+++ b/src/public/frontend/analise.html
@@ -74,11 +74,11 @@
           </div>
           
           <div class="tabela-flex">
-            <div id="Titulo1" >DADOS GERAIS DA VIAGEM</div>
+            <div style="font-size: 22px;" id="Titulo1" >DADOS GERAIS DA VIAGEM</div>
             <div style="margin-bottom: 10vh;"id="tabela"></div>
-            <div id="Titulo2">VAGÃO E</div>
+            <div style="font-size: 22px;" id="Titulo2">VAGÃO E</div>
             <div style="margin-bottom: 10vh;" id="tabela2"></div>
-            <div id="Titulo3">VAGÃO F</div>
+            <div style="font-size: 22px;" id="Titulo3">VAGÃO F</div>
             <div style="margin-bottom: 10vh;" id="tabela3"></div>
           </div>
                 </div>
