--- a/src/public/frontend/analise.html
+++ b/src/public/frontend/analise.html
@@ -23,7 +23,7 @@
   <body style="overflow-x: hidden;">
 
     <div class="content-analise">
-      <header>
+      <header style="z-index: 2;">
         <nav>
           <a href="paghome.html" class="link">
               <img src="images/logoinovtech.png">
